--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,9 @@ h1{
 }
 /*top*/
 section{
-    margin:0 auto;
+   margin:0 auto;
    height:20rem;
    width:75%;
-    
    display:block;
 }
 .div{
@@ -47,15 +46,19 @@ section{
    display:block;
    text-align: center;
    color:#ffffff;
-   font-size:3rem;
+   font-size:1.5rem;
 }
 #green{
-    background-color:green;
+    background-color:#519251;
     float:left;
 }
 /*grey_line*/
 .hr{
    width:90%; 
+}
+ul{
+  display:inline-block;
+  border:.5rem solid #dddddd;
 }
 #blue{
     background-color:blue;
